src/main/metadata-retrieve/objects/Campaign_Offering__c.object
<CustomObject>
    <description>Campaign: Components of Campaign Package.</description>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaign Offerings</relationshipLabel>
        <relationshipName>Campaign_Offerings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Campaign Offering</label>
    <nameField>
        <label>Offering Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign Offerings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Start_Date_is_less_than_the_End_Date</fullName>
        <active>false</active>
        <errorConditionFormula>Start_Date__c  &gt;  End_Date__c</errorConditionFormula>
        <errorMessage>Start Date must be less than or equal to End Date</errorMessage>
    </validationRules>
</CustomObject>